--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "ngx-scrollbar": "^13.0.3",
     "rxjs": "~7.8.1",
     "tslib": "^2.7.0",
-    "zone.js": "~0.14.10"
+    "zone.js": "~0.14.10",
+    "ngx-ui-loader": "^11.0.0",
+    "@angular/material": "^18.2.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^18.2.1",
