--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -3,19 +3,11 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/spec",
-    "types": [
-      "jasmine",
-      "@angular/localize"
-    ],
+    "types": ["jasmine", "@angular/localize"],
     "paths": {
       "@docs-components/*": ["./src/components/*"]
     }
   },
-  "files": [
-    "src/test.ts",
-  ],
-  "include": [
-    "src/**/*.spec.ts",
-    "src/**/*.d.ts"
-  ]
+  "files": ["src/test.ts"],
+  "include": ["src/**/*.spec.ts", "src/**/*.d.ts"]
 }
